2008-07-14  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Alessandro Decina <alessandro at nnva dot org>

	* gst/avi/gstavidemux.c: (gst_avi_demux_riff_parse_vprp):
	Fix build of avidemux on big endian architectures.

2008-07-10  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	Patch by: Thiago Sousa Santos <thiagoss at lcc dot ufcg dot edu dot br>

	* gst/qtdemux/qtdemux.c: (qtdemux_audio_caps):
	Correctly distinguish 8bit vs 16bit raw audio.  Fixes #542410.

2008-07-08  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_add_stream),
	(qtdemux_parse_trak):
	Set pixel-aspect-ratio in caps using display width and height
	provided in track.

2008-07-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Don't include ERROR_CFLAGS in GST_CXXFLAGS as it might include
	flags that are invalid for C++. Fixes bug #516509.

2008-07-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/raw1394/gstdv1394src.c: (gst_dv1394src_uri_set_uri):
	* ext/speex/gstspeexenc.c: (gst_speex_enc_sink_getcaps):
	* ext/wavpack/gstwavpackenc.c: (gst_wavpack_enc_set_wp_config):
	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_fixate):
	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_probe_caps_for_format):
	* tests/examples/equalizer/demo.c: (message_handler):
	* tests/examples/spectrum/demo-audiotest.c: (message_handler):
	* tests/examples/spectrum/demo-osssrc.c: (message_handler):
	Don't use declarations after statements and variable length arrays.

2008-07-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Daniel Drake <dsd at gentoo dot org>

	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_set_capture),
	(gst_v4l2src_get_nearest_size):
	Try progressive video if interlaced fails. Fixes bug #541956
	and the usage of v4l2src on OLPC.

2008-07-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/rtp/gstrtpspeexdepay.c: (gst_rtp_speex_depay_init),
	(gst_rtp_speex_depay_process):