@@ -26,6 +26,11 @@
 #include <stdio.h>
 #include <memory.h>
 
+/* EAI_ADDRFAMILY was obsoleted in BSD at some point */
+#ifndef EAI_ADDRFAMILY
+#define EAI_ADDRFAMILY 1
+#endif
+
 #include "gstudpnetutils.h"
 
 #ifdef G_OS_WIN32
